| Summary: | ASTERISK-28920: bridge show all causes crash | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2020-05-28 20:02:56 | Date Closed: | 2020-06-05 05:34:56 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Bridges/bridge_builtin_features |
| Versions: | 17.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | {noformat}
(gdb) #0 0x000056550a05da1a in handle_bridge_show_all (e=0x56550a2f1340 <bridge_cli>, cmd=-4, a=0x7f7eca834440) at bridge.c:5089 #1 0x000056550a0ae198 in ast_cli_command_full (uid=0, gid=0, fd=25, s=0x7f7eca834720 "bridge show all") at cli.c:2824 #2 0x000056550a0ae32e in ast_cli_command_multiple_full (uid=0, gid=0, fd=25, size=16, s=0x7f7eca834b70 "bridge show all") at cli.c:2851 #3 0x000056550a0390be in netconsole (vconsole=0x56550a31efa0 <consoles>) at asterisk.c:1428 #4 0x000056550a1bb748 in dummy_start (data=0x56550b22ca70) at utils.c:1249 #5 0x00007f7ecd257fa3 in start_thread (arg=<optimized out>) at pthread_create.c:486 #6 0x00007f7eccceb4cf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95 (gdb) channel 3: open failed: connect failed: Connection refused (gdb) set print pretty on (gdb) frame 0 #0 0x000056550a05da1a in handle_bridge_show_all (e=0x56550a2f1340 <bridge_cli>, cmd=-4, a=0x7f7eca834440) at bridge.c:5089 5089 ast_format_duration_hh_mm_ss(ast_tvnow().tv_sec - snapshot->creationtime.tv_sec, print_time, sizeof(print_time)); (gdb) list 5084 iter = ao2_iterator_init(bridges, 0); 5085 for (; (bridge = ao2_iterator_next(&iter)); ao2_ref(bridge, -1)) { 5086 struct ast_bridge_snapshot *snapshot = ast_bridge_get_snapshot(bridge); 5087 char print_time[32]; 5088 5089 ast_format_duration_hh_mm_ss(ast_tvnow().tv_sec - snapshot->creationtime.tv_sec, print_time, sizeof(print_time)); 5090 5091 if (snapshot) { 5092 ast_cli(a->fd, FORMAT_ROW, 5093 snapshot->uniqueid, (gdb) p snapshot $1 = (struct ast_bridge_snapshot *) 0x0 (gdb) p bridge $2 = (struct ast_bridge *) 0x7f7eac007ad0 {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-05-28 20:02:57.993-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-06-05 05:34:57.992-0500 Change 14470 merged by Friendly Automation: bridge.c: Fixed null pointer exception [https://gerrit.asterisk.org/c/asterisk/+/14470|https://gerrit.asterisk.org/c/asterisk/+/14470] By: Friendly Automation (friendly-automation) 2020-06-05 05:35:54.085-0500 Change 14448 merged by Joshua Colp: bridge.c: Fixed null pointer exception [https://gerrit.asterisk.org/c/asterisk/+/14448|https://gerrit.asterisk.org/c/asterisk/+/14448] | ||